# JaxMARL-HFT

./: .gitignore  Dockerfile  Makefile  README.md  conda_install.sh  gpu_bash.sh  load_env.sh  load_exp_env.sh  order_execution_v3_reward.patch  requirements.txt  setup_jaxmarl.sh
 archieve/: create_gpu_session.sh  test.sh
.hydra/: config.yaml  hydra.yaml  overrides.yaml
as_model/: README.md  avellaneda_stoikov_amzn.py  lobster_as.py  pyproject.toml  requirements.txt  run_lobster_as.sh
classical_models/: README.md  pyproject.toml
classical_models/ac_model/: README.md  run_lobster_ac.sh
classical_models/ac_model/configs/: ac_amzn.yaml
classical_models/ac_model/examples/: README.md
classical_models/ac_model/scripts/: run_ac_benchmark.sh
classical_models/ac_model/src/ac_benchmark/: __init__.py  ac_policy.py  calibration.py  cli.py  data.py  fast_calibration.py  fast_replay.py  lobster_pipeline.py  metrics.py  plots.py  replay.py  schema.py
classical_models/ac_model/tests/: test_ac_policy.py  test_lobster_pipeline.py  test_replay_smoke.py
classical_models/as_model/: README.md  as_model.py  avellaneda_stoikov_amzn.py  run_lobster_as.sh
classical_models/as_model/metrics/: __init__.py  drawdown.py  inventory.py  portfolio.py
classical_models/as_model/script/: generate_as_thesis_plots.py  run_as_baseline.py
classical_models/as_model/tests/: test_as_baseline_cli.py
old/: 02_setup_python_env.sh  05_smoke_train.sbatch  10_train_h100_4gpu_4096_8388608.sbatch  patch_h100_single_node.sh
slurm_logs/: jmhft-4h100-4096-134217728-24275256.err  (+9 more)
(+292 files in other folders)
